--- a/HighLandirect/Views/CustomerView.xaml
+++ b/HighLandirect/Views/CustomerView.xaml
@@ -49,7 +49,7 @@
         <Label Content="夕版番号" Grid.Column="3" />
         <TextBox Name="PostalCD" Text="{Binding Customer.PostalCD, Converter={x:Static Converters:PostalCdConverter.Default}, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True,
                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                 MaxLength="8" Grid.Column="4" HorizontalAlignment="Stretch" DataContext="{Binding}" KeyUp="{Binding TextBox_KeyUp}" FontSize="16" Margin="0,11,0,0" Width="129">
+                 MaxLength="8" Grid.Column="4" HorizontalAlignment="Stretch" DataContext="{Binding}" FontSize="16" Margin="0,11,0,0" Width="129">
         </TextBox>
 
         <Label Content="市町村名" Grid.Column="3" Grid.Row="1" />
